...

              if (uom.isNotEmpty) {
                await _saveCustomUOM(uom);
                Navigator.pop(context, uom);
              }
            },
            child: const Text("Add"),
          ),
        ],
      ),
    );
  }

...
                  ElevatedButton(
                    onPressed: () => handleSave(andNew: false),
                    style: ElevatedButton.styleFrom(
                      backgroundColor: Colors.teal,
                    ),
                    child: const Text(
                      "Save",
                      style: TextStyle(color: Colors.white),
                    ),
                  ),
                ],
              ),
            );
...
