...
  final List<Supplier> suppliers;
  final String title;

  const SupplierSearchDialog({
    super.key,
    required this.suppliers,
    this.title = 'Select Supplier',
  });

  @override
  State<SupplierSearchDialog> createState() => _SupplierSearchDialogState();
}

...
